Linters (#93)
* adding sonarqube

* resolving sonar scan issues